syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "forwardproxy/server";

package server;

message User{
  string username = 1;
  string password = 2;
  uint64 traffic = 3;
  string ip = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message UserList{
  repeated User user_list = 1;
}

message interval{
  int64 interval = 1;
}

service Server {
  rpc AddUser(User)returns (google.protobuf.Empty){}
  rpc UpdateUser(User)returns (google.protobuf.Empty){}
  rpc DeleteUser(User)returns (google.protobuf.Empty){}
  rpc SyncUser(UserList)returns (google.protobuf.Empty){}
  rpc TrafficStats (interval) returns (stream UserList) {}
}

